# Tales-of-Kejin

./: Cargo.toml  README.md  Readme.md  package.json
docs/card-collection/: 3-non-uniform-coupon-collection.md
docs/pseudo-random/: Readme.md  guarantee-mechanism.m  guarantee-mechanism.md  pseudo-random-distribution.m  pseudo-random-distribution.md
projects/web-book/: package.json
projects/web-book/docs/.vuepress/: config.js
projects/web-book/docs/card-collection/: 1-classic-coupon-collection.md  2-coupon-incomplete-collection.md  most-collected-coupon.md
projects/web-book/docs/pseudo-random/: delayed-progressive-guarantee.md  guarantee-mechanism.md
